--- a/root/webapp/WEB-INF/web.xml
+++ b/root/webapp/WEB-INF/web.xml
@@ -20,12 +20,39 @@
   </servlet-mapping>
 
   <servlet>
+    <servlet-name>TableEditorPage</servlet-name>
+    <servlet-class>aces.webctrl.postgresql.web.TableEditorPage</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>TableEditorPage</servlet-name>
+    <url-pattern>/TableEditor</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
     <servlet-name>SaveOperator</servlet-name>
     <servlet-class>aces.webctrl.postgresql.web.SaveOperator</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>SaveOperator</servlet-name>
     <url-pattern>/SaveOperator</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>LogViewerPage</servlet-name>
+    <servlet-class>aces.webctrl.postgresql.web.LogViewerPage</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LogViewerPage</servlet-name>
+    <url-pattern>/LogViewer</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>LocalOperatorsPage</servlet-name>
+    <servlet-class>aces.webctrl.postgresql.web.LocalOperatorsPage</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LocalOperatorsPage</servlet-name>
+    <url-pattern>/LocalOperators</url-pattern>
   </servlet-mapping>
 
   <security-constraint>
